ver 0.17 (2011/??/??)
* protocol:
  - support client-to-client communication
  - "update" and "rescan" need only "CONTROL" permission
  - new command "seekcur" for simpler seeking within current song
  - new command "config" dumps location of music directory
  - add range parameter to command "load"
  - print extra "playlist" object for embedded CUE sheets
* input:
  - cdio_paranoia: new input plugin to play audio CDs
  - curl: enable CURLOPT_NETRC
  - curl: non-blocking I/O
  - soup: new input plugin based on libsoup
* tags:
  - RVA2: support separate album/track replay gain
* decoder:
  - mpg123: implement seeking
  - ffmpeg: drop support for pre-0.5 ffmpeg
  - oggflac: delete this obsolete plugin
  - dsdiff: new decoder plugin
* output:
  - alsa: support DSD-over-USB (dCS suggested standard)
  - httpd: support for streaming to a DLNA client
  - openal: improve buffer cancellation
  - osx: allow user to specify other audio devices
  - osx: implement 32 bit playback
  - shout: add possibility to set url
  - roar: new output plugin for RoarAudio
  - winmm: fail if wrong device specified instead of using default device
* mixer:
  - alsa: listen for external volume changes
* playlist:
  - allow references to songs outside the music directory
  - new CUE parser, without libcue
  - soundcloud: new plugin for accessing soundcloud.com
* state_file: add option "restore_paused"
* cue: show CUE track numbers
* allow port specification in "bind_to_address" settings
* support floating point samples
* systemd socket activation


ver 0.16.9 (2012/??/??)
* decoder:
  - ffmpeg: support WebM
* improve --version output
* WIN32: fix renaming of stored playlists with non-ASCII names


ver 0.16.8 (2012/04/04)
* fix for libsamplerate assertion failure
* decoder:
  - vorbis (and others): fix seeking at startup
  - ffmpeg: read the "year" tag
* encoder:
  - vorbis: generate end-of-stream packet before tag
  - vorbis: generate end-of-stream packet when playback ends
* output: